All itests pass over http+ejbd
git-svn-id: https://svn.apache.org/repos/asf/incubator/openejb/trunk/openejb3@446020 13f79535-47bb-0310-9956-ffa450edef68